# xdg-desktop-portal-verdi

./: Cargo.toml  README.md  justfile  verdi.portal
