[package]
name = "xdg-desktop-portal-verdi"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/verdiwm/xdg-desktop-portal-verdi"
publish = false

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
